# mypacsproject

./: bim2c_mesh_properties.m  bim3a_advection_diffusion.m  msh3m_nodes_on_faces.m  msh3m_quadmesh.m  pacs_matlab_project_2d.m
cplusplus/: Makefile
cplusplus/include/: bernoulli.hpp  bim3a.hpp  bim3a_advection_diffusion.hpp  bim3a_rhs.hpp  bim_sparse.hpp  msh2m_nodes_on_side.hpp  msh3m_nodes_on_faces.hpp  mumps_class.h  mumps_solve.h  quadmesh.hpp
cplusplus/src/: Makefile.am  Makefile.in  abstract_forcing_term.h  abstract_nonlinear_problem.h  adaptive_inexact_newton_class.cpp  adaptive_inexact_newton_class.h  backtracking_inexact_newton_class.cpp  backtracking_inexact_newton_class.h  bgs_class.cpp  bgs_class.h  bim2a_rhs.cpp  bim3a.cpp  bim3a_advection_diffusion.cpp  bim3a_rhs.cpp  bim_config.h.in  bim_config_pre.h.in  bim_sparse.cpp  bim_sparse.h  bim_timing.h  forcing_class.cpp  forcing_class.h  linear_solver.h  lis_class.cpp  lis_class.h  lis_class_master.cpp  lis_class_slaves.cpp  main.cpp  mesh.cpp  mesh.h  mumps_class.cpp  mumps_class.h  mumps_solve.cpp  mumps_solve.h  nonlinear_solver.h  operators.cpp  operators.h  quad_mesh.cpp  quad_mesh.h  quad_operators.cpp  quad_operators.h  (+6 more)
cplusplus/test/: Makefile  Makefile.am  Makefile.in  a.out  bgs_test.cpp  bim3_quad_test.cpp  bim3_stationary_test.cpp  bim3_stationary_test2.cpp  bim3_stationary_test2_osc.cpp  bim3_stationary_test3.cpp  bim3_stationary_test3_osc.cpp  bim3_stationary_test4.cpp  bim3_test.cpp  bim3_test2.cpp  bim3_test3.cpp  bim3_test4.cpp  bim3_timedependent_test.cpp  bim3_timedependent_test2.cpp  bim3_timedependent_test2_osc.cpp  bim3_timedependent_test3.cpp  bim3_timedependent_test3_osc.cpp  create_test_mesh.m  create_test_mesh_cube.m  create_test_mesh_cube2.m  equation_class.cpp  equation_class.h  linear_solver_test.cpp  linear_solver_test_repeated.cpp  lis_stationary_test.cpp  lis_timedependent_test.cpp  mesh_in.msh  mesh_in_cube.msh  mesh_in_cube2.msh  nonlinear_solver_eq_test.cpp  nonlinear_solver_test.cpp  nonlinear_solver_test2.cpp  nonlinear_solver_test3.cpp  nonlinear_solver_test4.cpp  plaplacian_class.cpp  plaplacian_class.h  (+3 more)
matlab/: bim2a_advection_diffusion.m  bim2a_rhs.m  bim2c_unknowns_on_side.m  bim3a_rhs.m  msh2m_geometrical_properties.m  msh2m_nodes_on_sides.m  msh2m_quadmesh.m  msh2m_structured_mesh.m  msh3m_structured_mesh.m  pacs_matlab_project_3d.m
